# huey

./: .env.example  .gitignore  .ruff.toml  AGENTS.md  README.md  docker-compose.yml  eslint.config.js  jsconfig.json  package-lock.json  package.json  playwright.config.js  vite.config.js
server/: .env.example  Dockerfile  README.md  __init__.py  auth.py  cache.py  cache_store_sqlite.py  config.py  datasets.py  derivations.py  engine.py  errors.py  export_service.py  export_store.py  logging_config.py  main.py  middleware.py  models.py  prewarm.py  pyproject.toml  query_budget.py  query_builder.py  rate_limit.py  relation_builder.py  request_context.py  requirements.txt  runtime.py  s3.py  utils.py
server/benchmarks/: baseline_metrics.json  thresholds.json  workloads.json
server/datasets_config/: datasets.yaml
server/docs/: architecture.md
server/routers/: __init__.py  datasets.py  export.py  health.py  query.py  schema.py
server/tests/: conftest.py  test_api_v1_routing.py  test_auth.py  test_cache.py  test_cache_sqlite.py  test_config.py  test_correlation.py  test_cors.py  test_datasets.py  test_datasets_api.py  test_datasets_cache.py  test_derivations.py  test_engine.py  test_error_contract.py  test_export_api.py  test_export_service.py  test_export_store.py  test_health.py  test_integration.py  test_lifespan.py  test_logging.py  test_models.py  test_prewarm.py  test_query_budget.py  test_query_builder.py  test_query_cache_api.py  test_query_cells_api.py  test_query_partitioned_api.py  test_query_picklist_api.py  test_query_tuples_api.py  test_rate_limiting.py  (+7 more)
(+231 files in other folders)
