[project]
name = "queryservice"
version = "0.1.0"
requires-python = ">=3.11"

[tool.coverage.run]
source = ["server"]
omit = ["server/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == \"__main__\"",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "asyncio: mark test as asyncio-based",
]
